// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render correctly outline button 1`] = `
<div>
  <button
    class="button outline"
    type="button"
  >
    Button component
  </button>
</div>
`;

exports[`Button component should render correctly primary button 1`] = `
<div>
  <button
    class="button primary"
    type="button"
  >
    Button component
  </button>
</div>
`;
